...
    </string>
    <string name="city_info_zone_number_since">
        Since <xliff:g example="Feb 1, 2016" id="date">%1$s</xliff:g> only
        vehicles <xliff:g example="with a green" id="with_colors">%2$s</xliff:g> sticker are
        allowed to drive into the low emission zone.
    </string>
    <string name="city_info_zone_number_since_date_format">MMM d, yyyy</string>
    <string name="city_info_zone_number_since_text_fragment_green">
        with a green
    </string>
    <string name="city_info_zone_number_since_text_fragment_yellow">
        with a yellow or a green
    </string>
    <string name="city_info_zone_number_since_text_fragment_red">
        with a red, a yellow or a green
    </string>
    <string name="city_info_zone_number_none">
        Vehicles of all emission classes are allowed to drive into the low emission zone.
    </string>
    <string name="city_info_next_zone_number_as_of">
        As of <xliff:g example="Feb 1, 2016" id="date">%1$s</xliff:g> only
        vehicles <xliff:g example="with a green" id="with_colors">%2$s</xliff:g> sticker are
        allowed to drive into the low emission zone.
...
    <string name="city_info_list_of_cities">
        The zone contains the following cities or certain
        districts: <xliff:g example="Bochum, Castrop-Rauxel, Essen" id="cities">%1$s</xliff:g> and
        <xliff:g example="Recklinghausen" id="last_city">%2$s</xliff:g>.
    </string>

    <string name="city_info_further_information">Further information online</string>
    <string name="city_info_badge_online_title">Online sticker application form</string>

    <string name="city_info_geometry_source_text">Source of
        the geometry coordinates: <xliff:g example="Geoportal Berlin / Umweltzone Berlin" id="geometrySource">%1$s</xliff:g>
    </string>

    <string name="city_info_geometry_updated_at_date_format">
        MMM d, yyyy
    </string>
    <string name="city_info_geometry_updated_at_text">
        Last update of the zone
        geometry: <xliff:g example="Sep 6, 2014" id="updatedAt">%1$s</xliff:g>
    </string>
...
