<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2016  Tobias Preuss

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".city.NoCitySelectedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/NoCitySelected.Title"
            android:text="@string/no_city_selected_title" />

        <TextView
            style="@style/NoCitySelected.StatusDesc"
            android:text="@string/no_city_selected_status_desc" />

        <Button
            android:id="@+id/no_city_selected_select_zone"
            style="@style/NoCitySelected.SelectZone"
            android:text="@string/no_city_selected_select_zone" />

    </LinearLayout>
</ScrollView>
